this dialogBox which arrived and show you what do you write.
It give the number of parameters etc ...
-fixbug

1999-09-16 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------	
-Now Kspread_dlg_create works ,you can select with mouse.
-MouseDoubleClick on canvas call layout_dlg.

1999-09-17 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------	
-Cleanup in kspread_dlg_create
-Improved Kspread_dlg_create. Now if you choose a function in a cell
and you unselect it, when you close kspread_dlg_create, cell is recreating.
-Add new button for choose function, you can add function if = is not here
in the cell or editwidget = is add.

1999-09-18 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
Now when you click on bold button or italic button and in the cell
it's a richtext so you add <i> </i> or <b> </b> .
So text is in italic or bold.

1999-09-20 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add now function REPT
-When you selection a text in editWidget and first character egal to !
and you click on bold or italic you add <b> </b> or <i> </i>
-Start improved of special paste => operation add ,mult etc...

1999-09-21 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now Special paste =>operation ,works
-Reggie had a good idea to add a Toolbar for formula, So I had it
and now when you create formula with kformula widget a toolbar appear.
-Now when you doubleclick on cell you create a new cell with old text
inside so you can add text in this cell.

1999-09-22 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Bug fix : Now when you insert or remove column or row,there is recalculing
-Add new button on formula toolbar (SUM and Product)
-bugfix
-Now you can copy a function with "